--- a/index.html
+++ b/index.html
@@ -5,20 +5,75 @@
 <meta name="description" content="卒業式の式典開始まで">
 <meta name="robots" content="noindex, nofollow">
 <title>カウントダウン</title>
-<script src="./TimeCircle - jQuery Plugin Demo_files/jquery.min.js"></script>
-<script src="./TimeCircle - jQuery Plugin Demo_files/TimeCircles.js"></script>
 <link rel="stylesheet" href="./TimeCircle - jQuery Plugin Demo_files/TimeCircles.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<script src="./TimeCircle - jQuery Plugin Demo_files/TimeCircles.js"></script>
+
+<style type="text/css">
+  video{width:100%}
+  </style>
 </head>
 <body style="">
-<h1>カウントダウン</h1>
-<h2>卒業式式典開始まで、あと……</h2>
-<div class="someTimer" data-date="2018-03-18 13:30:00" style="width: 100%; height: 100%; padding: 0px; box-sizing: border-box; background-color: #E0E8EF">
-</div>
+  <h1>カウントダウン</h1>
+  <h2>卒業式式典開始まで、あと……</h2>
+  <div class="someTimer" data-date="2018-03-18 13:30:00" style="width: 100%; height: 100%; padding: 0px; box-sizing: border-box; background-color: #E0E8EF">
+  </div>
+  <div class="container">
+    <h1>カウントダウン動画</h1>
+    <div class="row">
+      <div class="col col-md-4 col-sm-12">
+        <h2>2月26日 残り20日</h2>
+        <video src="assets/movie/20180226.mp4" controls></video>
+      </div>
+      <div class="col col-md-4 col-sm-12">
+        <h2>2月27日 残り19日</h2>
+        <video src="assets/movie/20180227.mp4" controls></video>
+      </div>
+      <div class="col col-md-4 col-sm-12">
+        <h2>2月28日 残り18日</h2>
+        <video src="assets/movie/20180228.mp4" controls></video>
+      </div>
+    </div>
 
+    <div class="row">
+      <div class="col col-md-4 col-sm-12">
+      <h2>3月1日 残り17日</h2>
+      <video src="assets/movie/20180301.mp4" controls></video>
+      </div>
+
+      <div class="col col-md-4 col-sm-12">
+      <h2>3月2日 残り16日</h2>
+      <video src="assets/movie/20180302.mp4" controls></video>
+      </div>
+
+      <div class="col col-md-4 col-sm-12">
+      <h2>3月3日 残り15日</h2>
+      <video src="assets/movie/20180303.mp4" controls></video>
+      </div>
+
+    <div class = "row">
+      <div class="col col-md-4 col-sm-12"> 
+      <h2>3月5日 残り13日</h2>
+      <video src="assets/movie/20180305.mp4" controls></video>
+      </div>
+
+      <div class="col col-md-4 col-sm-12"> 
+      <h2>3月6日 残り12日</h2>
+      <p class="text-center">coming soon</p>
+      </div>
+
+      <div class="col col-md-4 col-sm-12"> 
+      <h2>3月7日 残り11日</h2>
+      <p class="text-center">coming soon</p>
+      </div>
+    </div>
+  </div>
 <script>
   $(".someTimer").TimeCircles().start();
 </script>
-
-
-
-</body></html>
+</body>
+</html>
