--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
       <div class="col col-md-4 col-sm-12"> 
       <h2>3月6日 残り12日</h2>
-      <p class="text-center">coming soon</p>
+      <video src="assets/movie/20180306.mp4" controls></video>
       </div>
 
       <div class="col col-md-4 col-sm-12"> 
