Add movie from 0312 to 0314

--- a/index.html
+++ b/index.html
@@ -97,18 +97,32 @@
 
       <div class="col col-md-4 col-sm-12"> 
       <h2>3月12日 残り6日</h2>
-      coming soon
-      <!--<video src="assets/movie/20180309.mp4" controls></video>-->
+      <video src="assets/movie/20180312.mp4" controls></video>
       </div>
 
       <div class="col col-md-4 col-sm-12"> 
       <h2>3月13日 残り5日</h2>
-      coming soon
-      <!--<video src="assets/movie/20180313.mp4" controls></video>-->
+      <video src="assets/movie/20180313.mp4" controls></video>
       </div>
     </div>
 
+    <div class = "row">
+      <div class="col col-md-4 col-sm-12"> 
+      <h2>3月14日 残り4日</h2>
+      <video src="assets/movie/20180314.mp4" controls></video>
+      </div>
 
+      <div class="col col-md-4 col-sm-12"> 
+      <h2>3月15日 残り3日</h2>
+      coming soon
+      <!--<video src="assets/movie/20180315.mp4" controls></video>-->
+      </div>
+
+      <div class="col col-md-4 col-sm-12"> 
+      <h2>3月16日 残り2日</h2>
+      coming soon
+      <!--<video src="assets/movie/20180316.mp4" controls></video>-->
+      </div>
   </div>
 <script>
   $(".someTimer").TimeCircles().start();
